--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Recording is available at https://www.youtube.com/watch?v=MeOK1UzGHYw
+
 Hello LCA 2015 tutorial-goer!
 
 First, if you use Windows, I'm sorry; this should work, but you'll have to
